# uav-rf-detector

./: .gitignore  README.md
uav-rf-detector-backend/core/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
uav-rf-detector-backend/core/src/: CMakeLists.txt
uav-rf-detector-backend/core/src/app/: main.cpp
uav-rf-detector-backend/core/src/lib/detector/: detector_factory.cpp
uav-rf-detector-backend/core/src/lib/general/: app_mediator.cpp
uav-rf-detector-backend/core/src/lib/service/: detection_service.cpp  detection_service.h  service_concept.h
uav-rf-detector-backend/core/src/lib/utils/: fmt_extensions.h  logger.h
uav-rf-detector-client/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  readme.md
uav-rf-detector-client/app/: CMakeLists.txt
uav-rf-detector-client/app/assets/qml/: main.qml
uav-rf-detector-client/app/assets/qml/components/: ResizableColumnsTableView.qml
uav-rf-detector-client/app/assets/qml/debug/: DebugRect.qml
uav-rf-detector-client/app/src/: CMakeLists.txt  main.cpp
uav-rf-detector-client/app/src/lib/utils/: logger.cpp  logger.h
uav-rf-detector-client/files/proto/: rf_detector.proto
uav-rf-detector-docs/: current_tasks.md
uav-rf-detector-docs/vault/.obsidian/: workspace.json
uav-rf-detector-docs/vault/Excalidraw/: mainscreen.excalidraw.md
uav-rf-detector-docs/vault/client/ui/: main screen.md
uav-rf-detector-ml/test/: visualize_from_mat.py  visualize_spectrogram.py
uav-rf-detector-service/: CMakeLists.txt  CMakeUserPresets.json  Cargo.toml  conanfile.py
uav-rf-detector-service/files/proto/: address.proto  addressbook.proto  rfdetector.proto
uav-rf-detector-service/src/: CMakeLists.txt  main.rs
uav-rf-detector-service/src/app/: CMakeLists.txt  main.cpp
uav-rf-detector-service/src/lib/detector/: detector_emulator.cpp  detector_emulator.h  detector_factory.h  i_detector.h
uav-rf-detector-service/src/lib/general/: app_mediator.cpp  app_mediator.h
uav-rf-detector-service/src/lib/server/: async_grpc_server.cpp  async_grpc_server.h  server_utils.h
uav-rf-detector-service/src/lib/service/: detection_service.cpp  detection_service.h  rpc_types.h  service_concept.h
uav-rf-detector-service/src/lib/utils/: logger.cpp  logger.h
uav-rf-detector-service/src/proto/: mod.rs
uav-rf-detector-service/src/service/: mod.rs
