[package]
name = "uav-rf-detector-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-build = "0.11.0"
chrono = "0.4.37"
crossbeam-channel = "0.5.12"
async-broadcast = "0.7.0"

[build-dependencies]
tonic-build = "0.11"